...
    @State private var showAlert: Bool = false
    
    var body: some View {
        VStack(alignment: .center, spacing: heightClass == .regular ? Constants.Spacings.settingsViewMainVStackSpacing : 25) {
            HStack {
                Image(systemName: "backward.fill")
                    .accessibilityIdentifier("back")
                    .font(.system(size: heightClass == .regular ? Constants.Fonts.attentionFont : Constants.Fonts.attentionFont))
                    .foregroundColor(Constants.Colors.settingsViewColor)
                    .onTapGesture {
                        withAnimation(.easeInOut) {
                            showSettingsView.toggle()
                        }
                    }
                Text("settings".localized(viewModel.language))
                    .accessibilityIdentifier("settings")
                    .font(.system(size: heightClass == .regular ? Constants.Fonts.attentionFont : Constants.Fonts.attentionFont))
            }
            
            HStack(alignment: .center, spacing: Constants.Spacings.settingsViewMainHStackSpacing) {
                Text("delete_all_data".localized(viewModel.language))
...
